--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
     <script src="js/demo/nifty-demo.min.js"></script>
 
 
+    <script src="js/atits_pc_js/perrmission.js"></script>
+
+
     <!--=================================================
 
     REQUIRED
@@ -350,7 +353,7 @@
                             <ul id="mainnav-menu" class="list-group">
 
                                 <!--Menu list item-->
-                                <li class="active-link">
+                                <li>
                                     <a href="index.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -360,7 +363,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="person">
                                     <a href="user.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -370,7 +373,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="system">
                                     <a href="system.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -380,7 +383,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="lab">
                                     <a href="laboratory.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -390,7 +393,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="sta">
                                     <a href="station.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -460,7 +463,7 @@
                                 </li>
                                 <!--Menu list item-->
                                 <li>
-                                    <a href="regulation.html">
+                                    <a href="task.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
 												<strong>工作任务</strong>
@@ -478,7 +481,7 @@
                                     </a>
                                 </li>
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="test">
                                     <a href="test_manager.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
