--- a/test_manage.html
+++ b/test_manage.html
@@ -55,7 +55,7 @@
     <!--Demo script [ DEMONSTRATION ]-->
     <script src="js/demo/nifty-demo.min.js"></script>
 
-
+    <script src="js/atits_pc_js/perrmission.js"></script>
     <!--=================================================
 
     REQUIRED
@@ -318,7 +318,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="person">
                                     <a href="user.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -328,7 +328,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="system">
                                     <a href="system.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -338,7 +338,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="lab">
                                     <a href="laboratory.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -348,7 +348,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="sta">
                                     <a href="station.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -418,7 +418,7 @@
                                 </li>
                                 <!--Menu list item-->
                                 <li>
-                                    <a href="regulation.html">
+                                    <a href="task.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
 												<strong>工作任务</strong>
@@ -436,8 +436,8 @@
                                     </a>
                                 </li>
                                 <!--Menu list item-->
-                                <li>
-                                    <a href="test_manage.html">
+                                <li style="display: none" id="test">
+                                    <a href="test_manager.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
 												<strong>考评管理</strong>
@@ -462,6 +462,9 @@
 											</span>
                                     </a>
                                 </li>
+
+
+
                             </ul>
                         </div>
                     </div>
