--- a/laboratory.html
+++ b/laboratory.html
@@ -70,7 +70,7 @@
 
     <!--Demo script [ DEMONSTRATION ]-->
     <script src="js/demo/nifty-demo.min.js"></script>
-
+    <script src="js/atits_pc_js/perrmission.js"></script>
 
     <!--Bootstrap Table Sample [ SAMPLE ]-->
     <script src="js/demo/tables-bs-table.js"></script>
@@ -689,7 +689,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="person">
                                     <a href="user.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -699,7 +699,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="system">
                                     <a href="system.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -709,7 +709,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="lab">
                                     <a href="laboratory.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -719,7 +719,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="sta">
                                     <a href="station.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -780,7 +780,7 @@
 
                                 <!--Menu list item-->
                                 <li>
-                                    <a href="regulation.html">
+                                    <a href="#">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
 												<strong>规章制度</strong>
@@ -789,7 +789,7 @@
                                 </li>
                                 <!--Menu list item-->
                                 <li>
-                                    <a href="sys_task.html">
+                                    <a href="task.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
 												<strong>工作任务</strong>
@@ -799,7 +799,7 @@
 
                                 <!--Menu list item-->
                                 <li>
-                                    <a href="task_progress.html">
+                                    <a href="taskProgress.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
 												<strong>工作进展</strong>
@@ -807,7 +807,7 @@
                                     </a>
                                 </li>
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="test">
                                     <a href="test_manager.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -817,7 +817,7 @@
                                 </li>
                                 <!--Menu list item-->
                                 <li>
-                                    <a href="files.html">
+                                    <a href="download.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
 												<strong>下载中心</strong>
@@ -833,6 +833,7 @@
 											</span>
                                     </a>
                                 </li>
+
 
 
                             </ul>
