--- a/system.html
+++ b/system.html
@@ -71,7 +71,7 @@
     <!--Demo script [ DEMONSTRATION ]-->
     <script src="js/demo/nifty-demo.min.js"></script>
 
-
+    <script src="js/atits_pc_js/perrmission.js"></script>
     <!--Bootstrap Table Sample [ SAMPLE ]-->
     <script src="js/demo/tables-bs-table.js"></script>
 
@@ -657,7 +657,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="person">
                                     <a href="user.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -667,7 +667,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="system">
                                     <a href="system.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -677,7 +677,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="lab">
                                     <a href="laboratory.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -687,7 +687,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="sta">
                                     <a href="station.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -748,7 +748,7 @@
 
                                 <!--Menu list item-->
                                 <li>
-                                    <a href="regulation.html">
+                                    <a href="#">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
 												<strong>规章制度</strong>
@@ -757,7 +757,7 @@
                                 </li>
                                 <!--Menu list item-->
                                 <li>
-                                    <a href="sys_task.html">
+                                    <a href="task.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
 												<strong>工作任务</strong>
@@ -767,7 +767,7 @@
 
                                 <!--Menu list item-->
                                 <li>
-                                    <a href="task_progress.html">
+                                    <a href="taskProgress.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
 												<strong>工作进展</strong>
@@ -775,7 +775,7 @@
                                     </a>
                                 </li>
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="test">
                                     <a href="test_manager.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -785,7 +785,7 @@
                                 </li>
                                 <!--Menu list item-->
                                 <li>
-                                    <a href="files.html">
+                                    <a href="download.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
 												<strong>下载中心</strong>
@@ -801,6 +801,7 @@
 											</span>
                                     </a>
                                 </li>
+
 
 
                             </ul>
