--- a/test_manager.html
+++ b/test_manager.html
@@ -66,10 +66,11 @@
 
     <!--Demo script [ DEMONSTRATION ]-->
     <script src="js/demo/nifty-demo.min.js"></script>
+
     <!--Bootstrap Datepicker [ OPTIONAL ]-->
     <script src="plugins/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
 
-
+    <script src="js/atits_pc_js/perrmission.js"></script>
     <!--Bootstrap Table Sample [ SAMPLE ]-->
     <script src="js/demo/tables-bs-table.js"></script>
 
@@ -97,6 +98,7 @@
     <script src="plugins/bootstrap-table/locale/bootstrap-table-zh-CN.js"></script>
 
     <script src="js/atits_pc_js/test_manager.js"></script>
+
     <!--=================================================
      <!--Form Component [ SAMPLE ]-->
 
@@ -667,7 +669,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="person">
                                     <a href="user.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -677,7 +679,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="system">
                                     <a href="system.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -687,7 +689,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="lab">
                                     <a href="laboratory.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -697,7 +699,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="sta">
                                     <a href="station.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -738,7 +740,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li class="active-link">
+                                <li>
                                     <a href="notice.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -767,7 +769,7 @@
                                 </li>
                                 <!--Menu list item-->
                                 <li>
-                                    <a href="regulation.html">
+                                    <a href="task.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
 												<strong>工作任务</strong>
@@ -785,7 +787,7 @@
                                     </a>
                                 </li>
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="test">
                                     <a href="test_manager.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
