change localhost to 47.104.26.79

--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
                 }
                 $.ajax({
                     crossDomain : true,
-                    url:"http://localhost:8080/login/login",
+                    url:"http://47.104.26.79:8080/atits_service/login/login",
                     dataType:"json",
                     data:param,
                     type:"post",
